# discordnamechanger2

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh
src/: db.rs  main.rs  namechanger.rs  namerestorer.rs
src/namechanger/: db.rs  mod.rs  nick_overrides.rs
