[package]
name = "discordnamechanger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
futures = "0.3.30"
itertools = "0.13.0"
log = "0.4.22"
rand = "0.8.5"
serenity = "0.12.2"
simple_logger = "5.0.0"
sled = "0.34.7"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }

